syntax = "proto3";

package aquatiq.gateway.health.v1;

option go_package = "github.com/aquatiq/integration-gateway/api/proto/health/v1;healthv1";

import "google/protobuf/timestamp.proto";

// HealthService provides health check endpoints for internal microservices
service HealthService {
  // Check performs a comprehensive health check
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Liveness checks if the service is alive (Kubernetes liveness probe)
  rpc Liveness(LivenessRequest) returns (LivenessResponse);
  
  // Readiness checks if the service is ready to handle requests (Kubernetes readiness probe)
  rpc Readiness(ReadinessRequest) returns (ReadinessResponse);
  
  // CheckPostgreSQL checks PostgreSQL database health
  rpc CheckPostgreSQL(PostgreSQLHealthRequest) returns (PostgreSQLHealthResponse);
  
  // CheckRedis checks Redis cache health
  rpc CheckRedis(RedisHealthRequest) returns (RedisHealthResponse);
}

// HealthCheckRequest is empty as comprehensive health needs no parameters
message HealthCheckRequest {}

// HealthCheckResponse contains overall system health status
message HealthCheckResponse {
  HealthStatus status = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
  int64 uptime_seconds = 4;
  DatabaseHealth postgresql = 5;
  DatabaseHealth redis = 6;
}

// LivenessRequest is empty for Kubernetes liveness probe
message LivenessRequest {}

// LivenessResponse indicates if service is alive
message LivenessResponse {
  bool alive = 1;
  google.protobuf.Timestamp timestamp = 2;
}

// ReadinessRequest is empty for Kubernetes readiness probe
message ReadinessRequest {}

// ReadinessResponse indicates if service is ready
message ReadinessResponse {
  bool ready = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// PostgreSQLHealthRequest for specific PostgreSQL health check
message PostgreSQLHealthRequest {
  string connection_name = 1; // Optional: specific connection to check
}

// PostgreSQLHealthResponse contains PostgreSQL health details
message PostgreSQLHealthResponse {
  HealthStatus status = 1;
  string version = 2;
  int32 active_connections = 3;
  int32 max_connections = 4;
  int64 database_size_bytes = 5;
  int64 response_time_ms = 6;
  string error = 7;
}

// RedisHealthRequest for specific Redis health check
message RedisHealthRequest {
  string connection_name = 1; // Optional: specific connection to check
}

// RedisHealthResponse contains Redis health details
message RedisHealthResponse {
  HealthStatus status = 1;
  string version = 2;
  int32 connected_clients = 3;
  int64 used_memory_bytes = 4;
  int64 response_time_ms = 5;
  string error = 6;
}

// DatabaseHealth represents health status of a database
message DatabaseHealth {
  HealthStatus status = 1;
  string name = 2;
  int64 response_time_ms = 3;
  string error = 4;
}

// HealthStatus enum for service health state
enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_DEGRADED = 2;
  HEALTH_STATUS_UNHEALTHY = 3;
}
